--- a/Sawoodamo.UI/src/app/layout/footer/footer.component.html
+++ b/Sawoodamo.UI/src/app/layout/footer/footer.component.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+<footer class="bg-primary text-white shadow dark:bg-gray-800 select-none">
+  <div
+    class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+  >
+    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+      >© 2024 <a routerLink="/" class="hover:underline">Sawoodamo</a>. All
+      Rights Reserved.
+    </span>
+    <footer-links-wrapper>
+      <footer-link routerLink="about">About</footer-link>
+      <footer-link routerLink="licensing">Licensing</footer-link>
+      <footer-link routerLink="contact">Contact</footer-link>
+    </footer-links-wrapper>
+  </div>
+</footer>
