--- a/Sawoodamo.UI/src/app/layout/header/logo/logo.component.html
+++ b/Sawoodamo.UI/src/app/layout/header/logo/logo.component.html
@@ -1,8 +1,11 @@
 <a routerLink="/" class="flex items-center">
   <img
-    src="../../../assets/Logo.jpg"
+    ngSrc="../../../assets/logo-small.jpg"
+    width="36"
+    height="36"
     class="mr-3 h-6 sm:h-9"
     alt="Sawoodamo Logo"
+    priority
   />
   <span class="self-center text-xl font-semibold whitespace-nowrap text-white"
     >Sawoodamo</span
