--- a/Sawoodamo.UI/src/app/commons/card/card.component.html
+++ b/Sawoodamo.UI/src/app/commons/card/card.component.html
@@ -2,14 +2,14 @@
   <div
     class="image-container aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80"
   >
-    <!-- <img
+    <img
       ngSrc="{{ imageUrl }}"
       width="300"
       height="280"
       priority
       alt="product image"
       class="h-full w-full object-cover object-center lg:h-full lg:w-full"
-    /> -->
+    />
   </div>
   <div class="mt-4 flex justify-between">
     <div>
