--- a/Sawoodamo.UI/src/app/pages/home/home.component.html
+++ b/Sawoodamo.UI/src/app/pages/home/home.component.html
@@ -1,7 +1,8 @@
 <main-image></main-image>
-<product-cards-container [productList]="(pinnedProductsObservable | async)" title="Products of the day">
+<product-cards-container
+  [productList]="pinnedProductsObservable | async"
+  title="Products of the day"
+>
 </product-cards-container>
-
-<p>{{placeHolderObservable | async | json}}</p>
 
 <footer></footer>
