--- a/Sawoodamo.UI/src/app/pages/home/home.component.html
+++ b/Sawoodamo.UI/src/app/pages/home/home.component.html
@@ -4,5 +4,15 @@
   title="Products of the day"
 >
 </product-cards-container>
+<product-cards-container
+  [productList]="pinnedProductsObservable | async"
+  title="Products of the day"
+>
+</product-cards-container>
+<product-cards-container
+  [productList]="pinnedProductsObservable | async"
+  title="Products of the day"
+>
+</product-cards-container>
 
 <footer></footer>
