--- a/Sawoodamo.UI/src/app/pages/home/main-image/main-image.component.html
+++ b/Sawoodamo.UI/src/app/pages/home/main-image/main-image.component.html
@@ -1,8 +1,8 @@
 <div class="background py-24 bg-scroll cursor-default select-none">
-  <div class="z-index-fix text-white text-center">
-    <p class="font-bold">LOREM INSUM DOLOR.</p>
+  <div class="z-index-fix py-24 text-white text-center">
+    <p class="pt-24 font-bold">LOREM INSUM DOLOR.</p>
     <h1 class="text-white text-6xl">Handmade</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p class="pb-24">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
   </div>
 </div>
