--- a/Sawoodamo.UI/src/app/layout/header/header.component.html
+++ b/Sawoodamo.UI/src/app/layout/header/header.component.html
@@ -11,10 +11,16 @@
         <nav-item routerLink="features">Features</nav-item>
         <nav-item routerLink="team">Team</nav-item>
       </nav-container>
-      @if(!isAuthenticated()){
+      @if(isAuthenticated() === false){
       <div class="flex items-center lg">
-        <button-default> Log in </button-default>
+        <button-default class="text-white"> Log in </button-default>
       </div>
+      } @else if(isAuthenticated() === true){
+      <div class="flex items-center lg">
+        <button-default class="text-white"> Log Out </button-default>
+      </div>
+      } @else if (isAuthenticated() === null) {
+        <button-default class="text-white"> Loading... </button-default>
       }
     </div>
   </nav>
