--- a/Sawoodamo.UI/src/app/pages/product/product.component.html
+++ b/Sawoodamo.UI/src/app/pages/product/product.component.html
@@ -1,3 +1,90 @@
-@if(productObs$ | async; as product){ 
-    {{product | json}}
+@if(product()){
+<section class="overflow-hidden bg-white py-11 text-primary dark:bg-secondary">
+  <div class="max-w-6xl px-4 py-4 mx-auto lg:py-8 md:px-6">
+    <div class="flex flex-wrap -mx-4">
+      <div class="w-full px-4 md:w-1/2">
+        <div class="sticky top-0 z-50 overflow-hidden">
+          <div class="relative mb-6 lg:mb-10 lg:h-2/4">
+            <img
+              height="580"
+              src="{{ product()!.productImages[selectedImageIndex()].url }}"
+              alt=""
+              class="object-cover w-full rounded-lg lg:h-full"
+            />
+          </div>
+
+          <div class="flex-wrap sm:flex">
+            @for (image of product()?.productImages; track $index) {
+            <div
+              class="w-1/4 sm:flex sm:justify-center p-2 sm:w-1/4"
+              (click)="selectImage($index)"
+            >
+              <img
+                src="{{ image.url }}"
+                [ngClass]="{ border: $index === selectedImageIndex() }"
+                alt=""
+                class="object-cover w-full rounded-lg lg:h-20"
+              />
+            </div>
+            }
+          </div>
+        </div>
+      </div>
+      <div class="w-full px-4 md:w-1/2">
+        <div class="lg:pl-20">
+          <div class="mb-8">
+            <h2 class="max-w-xl mt-2 mb-6 text-2xl font-bold md:text-4xl">
+              {{ product()?.name }}
+            </h2>
+            <p class="max-w-md mb-8">
+              {{ product()?.fullDescription }}
+            </p>
+            <p class="inline-block mb-8 text-4xl font-bold">
+              <span>₾{{ product()?.price }}</span>
+            </p>
+          </div>
+          <div class="sm:2-full md:w-1/2 mb-8">
+            <label class="w-full text-xl font-semibold">Quantity</label>
+            <div
+              class="relative flex flex-row w-full h-10 mt-4 bg-transparent rounded-lg"
+            >
+              <button
+                (click)="decreaseQuantity()"
+                class="w-1/3 h-full text-white hover:text-primary bg-primary hover:bg-secondary hover:border rounded-l"
+              >
+                <span class="m-auto text-2xl font-thin">-</span>
+              </button>
+              <div
+                class="bg-white w-1/3 flex items-center justify-center h-full"
+              >
+                <span class="w-20 text-center">
+                  {{ quantity() }}
+                </span>
+              </div>
+              <button
+                (click)="increaseQuantity()"
+                class="w-1/3 h-full text-white hover:text-primary bg-primary hover:bg-secondary hover:border rounded-r"
+              >
+                <span class="m-auto text-2xl font-thin">+</span>
+              </button>
+            </div>
+          </div>
+          <div class="flex flex-wrap items-center">
+            <div class="mb-4 sm:w-full md:w-1/2 lg:mb-0">
+              <button-default
+                class="flex items-center sm:py-3 text-white hover:text-primary bg-primary hover:bg-secondary hover:border justify-center rounded-md"
+              >
+                Add to Cart
+              </button-default>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+} @else {
+<div class="bg-secondary">
+  <h1 class="text-4xl">Loading...</h1>
+</div>
 }
