added modal. needs changes

--- a/Sawoodamo.UI/src/app/app.component.html
+++ b/Sawoodamo.UI/src/app/app.component.html
@@ -1,3 +1,7 @@
 <global-header></global-header>
 <router-outlet></router-outlet>
 <global-footer></global-footer>
+
+@if(!authService.isAuthenticated()){
+<log-in *ngIf="modalService.isModalOpen('auth')"></log-in>
+}
