--- a/Sawoodamo.UI/src/app/layout/header/header.component.html
+++ b/Sawoodamo.UI/src/app/layout/header/header.component.html
@@ -13,11 +13,11 @@
       </nav-container>
       @if(isAuthenticated() === false){
       <div class="flex items-center lg">
-        <button-default class="text-white"> Log in </button-default>
+        <button-default class="text-white" (click)="openAuthModal()"> Log in </button-default>
       </div>
       } @else if(isAuthenticated() === true){
       <div class="flex items-center lg">
-        <button-default class="text-white"> Log Out </button-default>
+        <button-default class="text-white" (click)="logOut()"> Log Out </button-default>
       </div>
       } @else if (isAuthenticated() === null) {
         <button-default class="text-white"> Loading... </button-default>
