--- a/Sawoodamo.UI/src/app/pages/product/product.component.html
+++ b/Sawoodamo.UI/src/app/pages/product/product.component.html
@@ -1,3 +1,15 @@
-@if(productObs$ | async; as product){ 
-    {{product | json}}
+@if(productObs$ | async; as product){
+<div>
+  <div>
+    <img src="{{ product.productImages[0].url }}" class="w-full" />
+  </div>
+  <div class="flex gap-2">
+    @for (image of product.productImages; track $index) {
+    <img src="{{ image.url }}" class="w-1/3" />
+    }
+  </div>
+  <p>Title: {{ product.name }}</p>
+  <p>ID: {{ product.id }}</p>
+</div>
+<!-- {{ product | json }} -->
 }
